--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-flow": "^3.2.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "win-node-env": "^0.4.0"
   }
 }
