--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@casl/ability": "^5.4.3",
+    "child_process": "^1.0.2",
     "dotenv-flow": "^3.2.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
