--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   "dependencies": {
     "@casl/ability": "^5.4.3",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
+    "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5",
+    "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
     "win-node-env": "^0.4.0"
   }
 }
