--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
