--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "sweetalert2": "^11.1.9"
   },
   "devDependencies": {}
 }
